--- a/index.css
+++ b/index.css
@@ -30,13 +30,14 @@ body{
     background-position: center;
 }
 #container1{
-    margin: 30px 0 40px 0;
+    margin: 20px 0 30px 0;
+    padding: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 #main1{
-    width: 650px;
+    width: 670px;
 }
 #contents2{
     margin-right: 30px;
@@ -49,13 +50,14 @@ body{
     font-size: 0.95rem;
 }
 #container2{
-    margin: 0 0 40px 0;
+    margin: 0 0 30px 0;
+    padding: 10px;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 #main2{
-    width: 650px;
+    width: 670px;
 }
 #contents3{
     margin-left: 30px;
